[package]
name = "titanrt-binance"
version = "0.1.0"
edition = "2024"

[dependencies]
titanrt = { version = "0.1.4", features = ["connector"] }
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
crossbeam-channel = "0.5.15"
url = "2.5.7"
serde_json = "1.0.143"
# tungstenite без встроенного TLS/deflate — мы сами делаем TLS-обёртку:
tungstenite = { version = "0.27.0", default-features = false, features = ["handshake",] }

# rustls 0.23.x: выбери криптопровайдера (aws-lc-rs по умолчанию или ring)
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.8.1"
tracing = "0.1.41"