[package]
name = "titanrt-binance"
version = "0.1.0"
edition = "2024"

[dependencies]
titanrt = { version = "0.2.2" }
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

tungstenite = { version = "0.27.0", default-features = false, features = [
    "handshake",
] }

rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
rustls-native-certs = "0.8.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.18.0", features = ["v4"] }
